--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ nav input{
 .flexbox-container {
     display: flex;
     flex-direction: column;
-    margin: 25px;
+    margin: 1.5em;
     border: 1px solid #444;
     position: relative;
     margin-top: 10vh;
@@ -294,30 +294,28 @@ nav input{
     left: 50%;
     margin-top: 2vh;
     transform: translate(-50%, -50%);
-    z-index: 1;
 }
 
 .flexbox-item {
-    width: 200px;
-    height: 200px;
-    margin: 10px;
+    width: 10vw;
+    height: 20vh;
+    margin: 1vw;
     margin-top: 7vh;
     border: 1px solid #fff;
     background-color: #333;
     text-align: center;
-    line-height: 200px;
+    line-height: 20vh;
 }
 
 .flexbox-big-item {
     width: 40vw;
     height: 50vh;
-    margin: 10px;
+    margin: 1vw;
     margin-top: 7vh;
     border: 1px solid #fff;
     background-color: #333;
     text-align: center;
-    line-height: 200px;
-
+    line-height: 50vh;
 }
 
 
@@ -386,3 +384,51 @@ section {
     justify-content: center;
     flex-direction: column;
 }
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #333;
+    margin: 10% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */
+    height: 55%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .login-form {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+  
