--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ body{
     color: #fff;
 }
 
-
-
 nav{
     position: fixed;
     z-index: 99;
@@ -27,7 +25,7 @@ nav .wrapper{
     line-height: 70px;
     margin: auto;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-between;
 }
 .wrapper .logo a{
@@ -141,131 +139,41 @@ nav .wrapper{
     top: 10px;
 }
 
-/* Media Queries for Responsive Design */
-@media screen and (max-width: 970px) {
-    /* Add responsive styles here */
-    .wrapper .btn{
-        display: block;
-    }
-    .wrapper .nav-links{
-        position: fixed;
-        height: 100vh;
-        width: 100%;
-        max-width: 350px;
-        top: 0;
-        left: -100%;
-        background: #242526;
-        display: block;
-        padding: 50px 10px;
-        line-height: 50px;
-        overflow-y: auto;
-        box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
-        transition: all 0.3s ease;
-    }
-    /* custom scroll bar */
-    ::-webkit-scrollbar {
-        width: 10px;
-    }
-    ::-webkit-scrollbar-track {
-        background: #242526;
-    }
-    ::-webkit-scrollbar-thumb {
-        background: #3A3B3C;
-    }
-    #menu-btn:checked ~ .nav-links{
-        left: 0%;
-    }
-    #menu-btn:checked ~ .btn.menu-btn{
-        display: none;
-    }
-    #close-btn:checked ~ .btn.menu-btn{
-        display: block;
-    }
-    .nav-links li{
-        margin: 15px 10px;
-    }
-    .nav-links li a{
-        padding: 0 20px;
-        display: block;
-        font-size: 20px;
-    }
-    .nav-links .drop-menu{
-        position: static;
-        opacity: 1;
-        top: 65px;
-        visibility: visible;
-        padding-left: 20px;
-        width: 100%;
-        max-height: 0px;
-        overflow: hidden;
-        box-shadow: none;
-        transition: all 0.3s ease;
-    }
-    #showDrop:checked ~ .drop-menu,
-    #showMega:checked ~ .mega-box{
-        max-height: 100%;
-    }
-    .nav-links .desktop-item{
-        display: none;
-    }
-    .nav-links .mobile-item{
-        display: block;
-        color: #f2f2f2;
-        font-size: 20px;
-        font-weight: 500;
-        padding-left: 20px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: all 0.3s ease;
-    }
-    .nav-links .mobile-item:hover{
-        background: #3A3B3C;
-    }
-    .drop-menu li{
-        margin: 0;
-    }
-    .drop-menu li a{
-        border-radius: 5px;
-        font-size: 18px;
-    }
-    .mega-box{
-        position: static;
-        top: 65px;
-        opacity: 1;
-        visibility: visible;
-        padding: 0 20px;
-        max-height: 0px;
-        overflow: hidden;
-        transition: all 0.3s ease;
-    }
-    .mega-box .content{
-        box-shadow: none;
-        flex-direction: column;
-        padding: 20px 20px 0 20px;
-    }
-    .mega-box .content .row{
-        width: 100%;
-        margin-bottom: 15px;
-        border-top: 1px solid rgba(255,255,255,0.08);
-    }
-    .mega-box .content .row:nth-child(1),
-    .mega-box .content .row:nth-child(2){
-        border-top: 0px;
-    }
-    .content .row .mega-links{
-        border-left: 0px;
-        padding-left: 15px;
-    }
-    .row .mega-links li{
-        margin: 0;
-    }
-    .content .row header{
-        font-size: 19px;
-    }
+.search-box{
+    width: 20vw;
+    margin:  2vh auto 0;
+    border-radius: 5px;
 }
-nav input{
-    display: none;
+
+.search-row{
+    display: flex;
+    align-items: center;
+    padding: 1vh 2vw;
 }
+
+input{
+    flex: 1;
+    height: 5vh;
+    background: transparent;
+    border: 0;
+    outline: none;
+    font-size: 18px;
+    color: #fff;
+}
+
+.result-box ul{
+    border-top: 1px solid #999;
+    padding: 15px 10px;
+}
+
+.result-box li{
+    list-style: none;
+    border-radius: 3px;
+    padding: 15px 10px;
+}
+
+/* nav input{
+} */
 
 
 .flexbox-container {
@@ -304,10 +212,10 @@ nav input{
     border: 1px solid #fff;
     background-color: #333;
     text-align: center;
-    line-height: 20vh;
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
+    
 }
 
 .flexbox-big-item {
@@ -319,6 +227,14 @@ nav input{
     background-color: #333;
     text-align: center;
     line-height: 50vh;
+}
+
+.flexbox-item h1{
+    background-color: rgba(51, 51, 51, 0.7);
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 0 0 1vh 1vh;
+
 }
 
 
@@ -360,7 +276,8 @@ nav input{
 }
 
 .description {
-    display: none; /* or display: block; or any other initial display property */
+    display: none;
+    justify-content: center;
 }
 
 
