--- a/style.css
+++ b/style.css
@@ -437,11 +437,10 @@ section {
 }
 
  .seat {
-    background-color: white;
-    background-image: url(icons/Seat.png);
+    /*background-color: white;*/
     background-size: cover;
-    width: 100px;
-    height: 100px;
+    width: 10px;
+    height: 10px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
