--- a/movie_schedule/movie_schedule_styles.css
+++ b/movie_schedule/movie_schedule_styles.css
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
-* {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-}
-
-/* Things, that should already be declared */
-body {
-    background-color: #74413e;
-}
-
-/* New styles */
 
 .calendar-box {
     width: 100%;
@@ -157,6 +145,7 @@ body {
     font-weight: 500;
     line-height: 24px;
     text-overflow: ellipsis;
+    text-align: start !important;
     overflow: hidden;
     white-space:nowrap;
 }
@@ -170,6 +159,7 @@ body {
     line-height: 8px;
     text-overflow: ellipsis;
     overflow: hidden;
+    text-align: start !important;
     white-space:nowrap;
     height: 20px;
 }
