--- a/style.css
+++ b/style.css
@@ -381,12 +381,24 @@ html, body, section {
 /*}*/
 
 section {
-    scroll-snap-align: start;
-    scroll-snap-stop: always;
     display: flex;
+}
+
+.sideBar {
+    width: 33vh;
+    background: #333;
+}
+
+.section-generator {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+}
+.sideBarContent{
+    margin: 8vh 1vw 1vh 1vw;
+    border: 1px solid #fff;
 }
 
 /* The Modal (background) */
@@ -481,3 +493,93 @@ section {
     padding: 16px 8px 8px;
     box-sizing: border-box;
 }
+
+/* Seat Modal */
+.seatModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+.modal-content-seat {
+    background-color: #333;
+    margin: 6% auto; /* 15% from the top and centered */
+    padding: 1vh;
+    border: 1px solid #888;
+    width: 30%; /* Could be more or less, depending on screen size */
+    height: 50%;
+  }
+
+  .seat-flexbox{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 100%;
+    margin: auto;
+  }
+
+  /* Ticket Styling */
+
+  .seat-id{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .seat-id div{
+    margin: 1vh;
+    border: 1px solid #fff;
+    border-radius: 5px;
+  }
+
+  .seat-id div p{
+    margin: 1vh;
+    text-align: center;
+  }
+
+  .seatbox-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content:flex-start;
+    align-items: center;
+    width: 90%;
+    margin-top: 3vh;
+  }
+  
+  .seat-wrapper .seat-id{
+    border: 1px solid #fff;
+    width: 80%;
+    text-align: center;
+  }
+
+  .seat-wrapper .seat-booking{
+    border: 1px solid #fff;
+    width: 80%;
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .sidebar{
+    display:flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items:flex-start;
+    width: 100%;
+    top: 100%;
+    max-width: 100%;
+    border: 1px solid #fff;
+  }
