--- a/style.css
+++ b/style.css
@@ -492,6 +492,23 @@ section {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+.sideBar {
+
+    width: 33vh;
+    background: #333;
+}
+
+.section-generator {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.sideBarContent{
+    margin: 11vh 1vw 1vh 1vw;
+    border: 1px solid #fff;
+}
 
  .seat {
     width: 30px;
