--- a/styles/style.css
+++ b/styles/style.css
@@ -6,18 +6,23 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-body{
-    background-color: #74413e;
-    color: #fff;
+
+/* Variables */
+:root {
+    --background-color: #74413e;
+    --navbar-color: #121212;
 }
 
-
+body{
+    background-color: var(--background-color);
+    color: #fff;
+}
 
 nav{
     position: fixed;
     z-index: 99;
     width: 100%;
-    background: #242526;
+    background: var(--navbar-color);
 }
 nav .wrapper{
     position: relative;
@@ -329,15 +334,6 @@ nav input{
 
 .description {
     display: none; /* or display: block; or any other initial display property */
-}
-
-
-.page-content {
-    height: 100vh;
-    text-align: center;
-    margin: 0 auto;
-    border: 0;
-    outline: 0;
 }
 
 html, body, section:not(.calendar-box) {
