--- a/styles/movie_schedule_styles.css
+++ b/styles/movie_schedule_styles.css
@@ -1,10 +1,9 @@
 
 .calendar-box {
     width: 100%;
-    height: 644px;
-    display: flex;
-    justify-content: right;
-    
+    height: 644px !important;
+    display: flexbox;
+    flex-direction: row !important;
 }
 
 .mo-calendar-box {
@@ -14,6 +13,7 @@
 
 #calendar-header {
     display: flex;
+    height: 100%;
     justify-content: center;
     width: 40%;
     padding-left: 5%;
