--- a/styles/movie_schedule_styles.css
+++ b/styles/movie_schedule_styles.css
@@ -20,8 +20,8 @@
     padding-right: 5%;
     text-align: start !important;
     flex-direction: column;
-    background-color: #050530;
-    border-right: 8px solid rgba(200,200,200,0.1);
+    background-color: #020225;
+    border-right: 8px solid rgba(255,255,255,0.05);
 }
 
 .calendar-header-divider {
@@ -59,23 +59,26 @@
 
 .date-card {
     display: inline-block;
-    width: 160px;
+    width: 180px;
     height: 100%;
-    background-color: #222222;
+    background-color: #141414;
+    border-right: 3px solid #181818;
+    border-left: 7px solid #181818;
 }
 
 .date-text-box {
     height: 50px;
-    width: 160px;
+    width: 170px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.2);
     margin-bottom: 8px;
     font-size: 14px;
+
     text-align: center;
     font-weight: 600;
-    box-shadow: 2px 2px 20px 4px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 10px 4px rgba(0, 0, 0, 0.5);
 }
 
 .date-text, .movie-date-text, .movie-text, p, h1 {
