--- a/styles/popular_movies.css
+++ b/styles/popular_movies.css
@@ -39,7 +39,6 @@
 
 .popular-movies-section:hover:before {
     background-position: 100% 100%;
-    cursor: pointer;
     z-index: 0;
 }
 
@@ -56,11 +55,12 @@
 }
 
 .popular-movies-title {
-    margin-bottom: 5%;
-    color: #fff;
-    font-size: 26px;
+    margin-bottom: 6%;
+    color: rgba(255, 255, 255, 0.8) !important;
+    font-size: 48px;
     z-index: 4;
 }
+
 
 .popular-movies-item {
     height: 31vh;
@@ -71,16 +71,17 @@
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
-    box-shadow: 0px 0px 40px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.05);
     z-index: 2;
 }
 
 .popular-movies-item:hover {
-    transition: 800ms ease ;
+    transition: 500ms ease;
     box-shadow: 0px 0px 40px 30px rgba(0, 0, 0, 0.7);
     background-position: center;
     background-repeat: no-repeat;
-    background-position-y: top;
+    margin-left: 32px;
+    margin-right: 32px;
     scale: 1.3;
     cursor: pointer;
     z-index: 3;
