--- a/styles/movie_schedule_styles.css
+++ b/styles/movie_schedule_styles.css
@@ -5,6 +5,8 @@
     display: flexbox;
     flex-direction: row !important;
     margin-bottom: 100px;
+    padding-top: 6px;
+    border-bottom: 6px solid black;
 }
 
 .mo-calendar-box {
@@ -120,6 +122,11 @@
     width: 92%;
     height: 210px; 
     background-color: white;
+}
+
+.action-button-left:hover, .action-button-right:hover, .mo-action-button:hover {
+    scale: 1.2;
+    transition: 200ms ease;
 }
 
 .poster-image, .movie-box {
