--- a/style.css
+++ b/style.css
@@ -413,6 +413,27 @@ section {
     height: 55%;
   }
 
+.myCancelModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+.cancel-form {
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
   /* The Close Button */
   .close {
     color: #aaa;
@@ -427,6 +448,21 @@ section {
     text-decoration: none;
     cursor: pointer;
   }
+
+  /*Cancel close button*/
+.cancelClose {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.cancelClose:hover,
+.cancelClose:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
 
   .login-form {
     position: absolute;
