--- a/style.css
+++ b/style.css
@@ -563,14 +563,49 @@ section {
      text-align: center;
 
  }
-.canvasBlock{
-    height: 10px;
-    width: 400px;
-    background-color: #ffffff;
-    margin-top: 25px;
-    margin-bottom: 10px;
-    margin-left: 35px;
-    box-shadow: 0px 150px 1000px 50px rgba(255, 255, 255, 0.1);
+.seatModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.sideBar {
+    width: 33vh;
+    background: #333;
+}
+.sideBarContent{
+    margin: 11vh 1vw 1vh 1vw;
+    border: 1px solid #fff;
+}
+.seat-flexbox{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    align-items: center;
+    height: 100%;
+    margin: auto;
+}
+.seat-id{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 100%;
+}
+.section-generator {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 
 #containerPOP {
