--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -535,4 +535,77 @@ section:not(.calendar-box .popular-movies-section) {
     background-color: lightgray;
     color: #000;
 }
+#leftBox{
+    border:1px solid lightgray;
+    margin-top: 140px;
+    margin-left: 15%;
+    padding: 25px;
+    width: 22.5%;
+    float:left;
+    height:auto;
+    background: #192531;
+    font-style: normal;
+    text-align: center;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+#rightBox{
+    border:1px solid lightgray;
+    margin-top: 140px;
+    margin-left: 5%;
+    padding: 0 25px 25px 25px;
+    width: 42.5%;
+    float:left;
+    height:auto;
+    background: #192531;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+
+}
+#addMovieH2{
+    text-transform: uppercase;
+}
+.addMovieLabel{
+    display: block;
+    margin-top:15px;
+    margin-bottom: 10px;
+    text-transform: capitalize;
+    font-size: 17px;
+}
+.addMovieInput{
+    background: lightgray;
+    padding: 5px 10px 5px 10px;
+    border:1px solid white;
+    color: black;
+    width: 60%;
+}
+.addMovieSubmit{
+    margin-top:20px;
+    color:white;
+    background-color: #024825;
+    border: 1px solid lightgray;
+    cursor: pointer;
+    padding: 10px 25px 10px 25px;
+    margin-right:15px;
+    float:left;
+}
+.addMovieSubmit:hover{
+    background-color: #036132;
+}
+.addMovieBackBtn{
+    margin-top:20px;
+    color:white;
+    background-color: #480202;
+    border: 1px solid lightgray;
+    cursor: pointer;
+    padding: 10px 25px 10px 25px;
+    float:left;
+}
+.addMovieBackBtn:hover{
+    background-color: #610303;
+}
+.addMovieDescription{
+    width:60%;
+    background: lightgray;
+    padding: 5px 10px 5px 10px;
+    border:1px solid white;
+}
   
