--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -236,13 +236,57 @@ section {
     margin: 5vh;
 }
 
+button:hover{
+    cursor: pointer;
+}
+
+.div2{
+    width: 25vw; 
+    display: flex; 
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center; 
+    padding: 2vh;
+}
+
+.div2 button{
+    margin: 1vh;
+}
+
 .div3{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
-    height: 90%;
+    justify-content: center;
+    height: 95%;
+    width: 95%;
     border: 1px dotted #fff;
-    margin: 5vh;
+    margin: 10px;
+}
+
+.div3 .default-showing{
+    width: 40vw;
+    height: 30vh;
+}
+
+.div3 .viewmovies{
+    display: none;
+}
+
+.div3 .addmovies{
+    display: none;
+}
+
+.div3 .deletemovies{
+    display: none;
+}
+
+.div3 .viewmovies .movieDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border: 1px dotted #fff;
 }
 
