--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -290,3 +290,12 @@ button:hover{
     border: 1px dotted #fff;
 }
 
+.movieBox{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    border: 1px dotted #fff;
+}
+
