--- a/public/styles/popular_movies.css
+++ b/public/styles/popular_movies.css
@@ -118,12 +118,12 @@
 
 
 .popular-movies-item {
-    height: calc(100% * 2.5);
-    width: 100%;
+    height: 250%;
+    width: 180px;
     margin-left: 0.5%;
     margin-right: 0.5%;
     text-align: center;
-    background-size: auto 100%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.05);
