--- a/public/saleItem/cinemaStore.css
+++ b/public/saleItem/cinemaStore.css
@@ -9,7 +9,7 @@
 
 /* Variables */
 :root {
-    --background-color: #101010;
+    --background-color: #9f4949;
     --navbar-color: #080808;
 }
 
@@ -604,150 +604,4 @@ section:not(.calendar-box .popular-movies-section) {
     background: lightgray;
     padding: 5px 10px 5px 10px;
     border:1px solid white;
-}
-
-:root {
-    --g1: black;
-    --g2: #101040;
-    --g3: #501010;
-}
-
-.popular-movies-section {
-    width: 100%;
-    background: linear-gradient(
-            130deg,
-            transparent 0% 0%,
-            var(--g1) 25%,
-            var(--g2) 50%,
-            var(--g3) 78%,
-            var(--g1) 90%
-    );
-}
-
-.popular-movies-section:before {
-    content: "";
-    display: block;
-    width: 100%;
-    top: 70px;
-    position: absolute;
-    height: calc(100% - 70px);
-    border-bottom: 6px solid rgba(0, 0, 0, 0.7);
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(
-            140deg,
-            var(--g1) 0%,
-            var(--g2) 70%,
-            var(--g3) 78%,
-            var(--g1) 100%
-    );
-    background-size: 300% 300%;
-    background-position: 0% 0%;
-    transition: background-position 350ms ease;
-}
-
-.popular-movies-section:hover:before {
-    background-position: 100% 100%;
-    z-index: 0;
-}
-
-.popular-movies-content {
-    background: radial-gradient(
-            rgba(255, 255, 255, 0.2) 8%,
-            transparent 8%,
-    );
-    background-position: 0%;
-    background-size: 5% 5%;
-    display: flex;
-    justify-content: center;
-    width: 95%;
-}
-
-.popular-movies-title{
-    margin-bottom: 6%;
-    color: rgba(255, 255, 255, 0.8) !important;
-    font-size: 48px;
-    z-index: 4;
-}
-
-.popular-movies-overlay {
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 5;
-    display: flex;
-    align-items: end;
-    justify-content: start;
-    background-image: linear-gradient(to top, rgba(0,0,0,1),rgba(0,0,0,0.8), rgba(0,0,0,0.6), rgba(0,0,0,0.3), rgba(0,0,0,0.0));
-    transition: 300ms ease;
-}
-
-.popular-movies-overlay:hover {
-    opacity: 1;
-    transition: 300ms ease;
-}
-
-.overlay-textbox {
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-bottom: 12px;
-}
-
-.popular-movies-overlay-title {
-    bottom: 0;
-    font-size: 14px !important;
-    font-weight: 500;
-    line-height: 18px;
-    text-overflow: ellipsis;
-    text-align: start !important;
-    overflow: hidden;
-    white-space:wrap;
-    height: min-content;
-    transition: 500ms ease;
-    margin-bottom: 2px;
-
-
-}
-.popular-movies-overlay-subtitle {
-    bottom: 0;
-    font-size: 10px !important;
-    color: rgba(255, 255, 255, 0.8);
-    font-weight: 100;
-    line-height: 12px;
-    display: -webkit-box;
-    -webkit-line-clamp: 5; /* number of lines to show */
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-    text-align: start !important;
-    overflow: hidden;
-    height: 61px;
-    transition: 500ms ease;
-}
-
-
-.popular-movies-item {
-    height: calc(100% * 2.5);
-    width: 100%;
-    margin-left: 0.5%;
-    margin-right: 0.5%;
-    text-align: center;
-    background-size: auto 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    box-shadow: 0px 0px 40px 10px rgba(0, 0, 0, 0.05);
-    z-index: 2;
-    transition: 1s ease;
-}
-
-.popular-movies-item:hover {
-    transition: 500ms ease;
-    box-shadow: 0px 0px 40px 30px rgba(0, 0, 0, 0.4);
-    background-position: center;
-    background-repeat: no-repeat;
-    margin-left: 32px;
-    margin-right: 32px;
-    scale: 1.3;
-    cursor: pointer;
-    z-index: 3;
-    translate: 0% -5%;
 }
