--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -86,27 +86,6 @@ nav .wrapper{
     font-weight: 400;
     border-radius: 0px;
 }
-.mega-box{
-    position: absolute;
-    left: 0;
-    width: 100%;
-    padding: 0 30px;
-    top: 85px;
-    opacity: 0;
-    visibility: hidden;
-}
-.mega-box .content{
-    background: #242526;
-    padding: 25px 20px;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    box-shadow: 0 6px 10px rgba(0,0,0,0.15);
-}
-.mega-box .content .row{
-    width: calc(25% - 30px);
-    line-height: 45px;
-}
 .content .row img{
     width: 100%;
     height: 100%;
@@ -117,23 +96,7 @@ nav .wrapper{
     font-size: 20px;
     font-weight: 500;
 }
-.content .row .mega-links{
-    margin-left: -40px;
-    border-left: 1px solid rgba(255,255,255,0.09);
-}
-.row .mega-links li{
-    padding: 0 20px;
-}
-.row .mega-links li a{
-    padding: 0px;
-    padding: 0 20px;
-    color: #d9d9d9;
-    font-size: 17px;
-    display: block;
-}
-.row .mega-links li a:hover{
-    color: #f2f2f2;
-}
+
 .wrapper .btn{
     color: #fff;
     font-size: 20px;
@@ -146,128 +109,6 @@ nav .wrapper{
     top: 10px;
 }
 
-/* Media Queries for Responsive Design */
-@media screen and (max-width: 970px) {
-    /* Add responsive styles here */
-    .wrapper .btn{
-        display: block;
-    }
-    .wrapper .nav-links{
-        position: fixed;
-        height: 100vh;
-        width: 100%;
-        max-width: 350px;
-        top: 0;
-        left: -100%;
-        background: #242526;
-        display: block;
-        padding: 50px 10px;
-        line-height: 50px;
-        overflow-y: auto;
-        box-shadow: 0px 15px 15px rgba(0,0,0,0.18);
-        transition: all 0.3s ease;
-    }
-    /* custom scroll bar */
-    ::-webkit-scrollbar {
-        width: 10px;
-    }
-    ::-webkit-scrollbar-track {
-        background: #242526;
-    }
-    ::-webkit-scrollbar-thumb {
-        background: #3A3B3C;
-    }
-    #menu-btn:checked ~ .nav-links{
-        left: 0%;
-    }
-    #menu-btn:checked ~ .btn.menu-btn{
-        display: none;
-    }
-    #close-btn:checked ~ .btn.menu-btn{
-        display: block;
-    }
-    .nav-links li{
-        margin: 15px 10px;
-    }
-    .nav-links li a{
-        padding: 0 20px;
-        display: block;
-        font-size: 20px;
-    }
-    .nav-links .drop-menu{
-        position: static;
-        opacity: 1;
-        top: 65px;
-        visibility: visible;
-        padding-left: 20px;
-        width: 100%;
-        max-height: 0px;
-        overflow: hidden;
-        box-shadow: none;
-        transition: all 0.3s ease;
-    }
-    #showDrop:checked ~ .drop-menu,
-    #showMega:checked ~ .mega-box{
-        max-height: 100%;
-    }
-    .nav-links .desktop-item{
-        display: none;
-    }
-    .nav-links .mobile-item{
-        display: block;
-        color: #f2f2f2;
-        font-size: 20px;
-        font-weight: 500;
-        padding-left: 20px;
-        cursor: pointer;
-        border-radius: 5px;
-        transition: all 0.3s ease;
-    }
-    .nav-links .mobile-item:hover{
-        background: #3A3B3C;
-    }
-    .drop-menu li{
-        margin: 0;
-    }
-    .drop-menu li a{
-        border-radius: 5px;
-        font-size: 18px;
-    }
-    .mega-box{
-        position: static;
-        top: 65px;
-        opacity: 1;
-        visibility: visible;
-        padding: 0 20px;
-        max-height: 0px;
-        overflow: hidden;
-        transition: all 0.3s ease;
-    }
-    .mega-box .content{
-        box-shadow: none;
-        flex-direction: column;
-        padding: 20px 20px 0 20px;
-    }
-    .mega-box .content .row{
-        width: 100%;
-        margin-bottom: 15px;
-        border-top: 1px solid rgba(255,255,255,0.08);
-    }
-    .mega-box .content .row:nth-child(1),
-    .mega-box .content .row:nth-child(2){
-        border-top: 0px;
-    }
-    .content .row .mega-links{
-        border-left: 0px;
-        padding-left: 15px;
-    }
-    .row .mega-links li{
-        margin: 0;
-    }
-    .content .row header{
-        font-size: 19px;
-    }
-}
 nav input{
     display: none;
 }
@@ -378,10 +219,11 @@ section:not(.calendar-box .popular-movies-section) {
   /* Modal Content/Box */
   .modal-content {
     background-color: #121212;
-    margin: 10% auto; /* 15% from the top and centered */
+    margin: 10% auto;
     padding: 20px;
     width: 30%; /* Could be more or less, depending on screen size */
     height: 55%;
+    border-radius: 50px;
   }
 
   .modal-content-movie {
@@ -516,7 +358,6 @@ section:not(.calendar-box .popular-movies-section) {
     float: right;
     font-size: 36px;
     font-weight: 400;
-    margin-right: 24px;
   }
 
   .close:hover,
