--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -178,7 +178,7 @@ nav input{
 }
 
 
-html, body, section:not(.calendar-box .popular-movies-section) {
+html, body, section:not(.calendar-box .popular-movies-section .footer) {
     block-size: 100%;
 }
 .page-content-reserveSeats {
@@ -603,6 +603,33 @@ section:not(.calendar-box .popular-movies-section) {
     padding: 1vh;
 }
 
+.footer{
+    width: 100%;
+    height: 100%;
+}
+.footer-content{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10rem;
+    align-items: start;
+    height: 95%;
+    width: 100%;
+    padding-top: 4vh;
+    background-color: #222;
+}
+.footer-bottom{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+}
+.footer p{
+    opacity: 75%;
+}
 /*#containerPOP {*/
 /*    display: none;*/
 /*    background-image: linear-gradient(to right, #66a80f, #c0eb75);*/
